# linked-markdown

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  NOTICE  README.md  package.json  pnpm-lock.yaml
.claude/: launch.json
.claude-plugin/: marketplace.json
.github/scripts/: validate-plugin.mjs
.github/workflows/: ci.yml  pages.yml  release.yml
apps/docs/: index.md  package.json
apps/docs/.vitepress/: config.ts
apps/docs/.vitepress/theme/: custom.css  index.ts
apps/docs/guide/: demo.md  getting-started.md  spec.md  syntax.md
apps/docs/ko/: index.md
apps/docs/ko/guide/: demo.md  getting-started.md
apps/playground/: index.html  package.json  vite.config.ts
apps/playground/src/: App.tsx  EditorShell.tsx  Logo.tsx  ModalViewer.tsx  SectionEditor.tsx  demo.ts  main.tsx  styles.css  workspace.ts
apps/playground/src/sandevaux/: base.css  colors.css  elevation.css  fonts.css  spacing.css  typography.css
conformance/: Cargo.toml
conformance/fixtures/canonical/: basic.lmd  imports-path.lmd
conformance/fixtures/diagnostics/: clean.lmd  dangling.codes  dangling.lmd
conformance/src/: lib.rs
conformance/tests/: run.rs
crates/lmd-cli/: Cargo.toml
crates/lmd-cli/src/: main.rs
crates/lmd-core/: Cargo.toml
crates/lmd-core/src/: address.rs  build.rs  check.rs  error.rs  hash.rs  lib.rs  model.rs  parse.rs  scan.rs  serialize.rs
crates/lmd-wasm/: Cargo.toml
crates/lmd-wasm/src/: lib.rs
examples/: getting-started.lmd
examples/notes/: oss-distribution-setup.lmd
extensions/vscode/: language-configuration.json  package.json  tsconfig.json
extensions/vscode/src/: extension.ts
extensions/vscode/syntaxes/: lmd.tmLanguage.json
integrations/: README.md  portable.md
integrations/chatgpt/: README.md  conversation-starters.txt  instructions.md
integrations/gemini/: README.md  instructions.md
plugins/linked-markdown/: README.md
plugins/linked-markdown/.claude-plugin/: plugin.json
plugins/linked-markdown/commands/: lmd-capture.md  lmd-graph.md  lmd-link.md
plugins/linked-markdown/hooks/: hooks.json  session-start.mjs
plugins/linked-markdown/skills/linked-markdown/: SKILL.md
skill/: SKILL.md
spec/: SPEC.md  SYNTAX.md
