[workspace]
resolver = "2"
members = [
    "crates/lmd-core",
    "crates/lmd-cli",
    "crates/lmd-wasm",
    "conformance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/makeisle/linked-markdown"
homepage = "https://github.com/makeisle/linked-markdown"
authors = ["Linked Markdown contributors"]

[workspace.dependencies]
lmd-core = { path = "crates/lmd-core", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
uuid = { version = "1", features = ["v7", "serde"] }
thiserror = "2"
regex = "1"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
wasm-bindgen = "0.2"

[profile.release]
lto = true
codegen-units = 1
