[package]
name = "lmd-cli"
description = "The `lmd` command-line tool for Linked Markdown documents."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["cli", "markdown", "linked-markdown", "documentation"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "lmd"
path = "src/main.rs"

[dependencies]
lmd-core.workspace = true
clap.workspace = true
serde_json.workspace = true
uuid.workspace = true
