[package]
name = "lmd-core"
description = "Reference implementation of the Linked Markdown (.lmd) format: model, parser, canonical serializer, address resolver, build & check."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
uuid.workspace = true
thiserror.workspace = true
regex.workspace = true
once_cell.workspace = true
